# berry_smart_meter

./: .env_example  Dockerfile  README.md  config.py  crud.py  forecast_main.py  logging_config.py  main.py  pyproject.toml  requirements.txt  shelly.py
data/: config_meter.yaml
database/: __init__.py  models.py  schemas.py  session.py
forecast/: consumption_data.py  forecast_prophet.py  forecast_strategy.py  requirements.txt
