[tool.poetry]
name = "energy-meter"
version = "0.1.0"
description = "raspberry pi zero enviroment"
authors = ["Willy Kästner willy.kaestner1@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
sqlalchemy = "1.4.39"
pydantic = {version = "1.10.8", extras = ["dotenv"]}
tinkerforge = "^2.1.30"
alembic = "^1.12.0"
PyYAML = "^6.0.1"
psycopg2-binary = "^2.9.7"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
